fixed image scale on small devices

--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ img{
     height: auto;
     max-height: 100%;
     max-width: 500px;
+
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.2);
 }
 
 .block{
@@ -52,6 +54,9 @@ img{
   }
 
 @media only screen and (max-width: 1100px){
+    img{
+        max-width: 100%;
+    }
     .block{
         flex-direction: column;
         width: 320px;
